<resources>
    <string name="app_name">Icfes G10</string>
    <string name="txt_search">Search</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_get_out">Sign Out </string>
    <string name="txt_email_login">Email</string>
    <string name="txt_email_domain">Email@domain.com</string>
    <string name="txt_password_login">Password</string>
    <string name="txt_button_login">Login</string>
    <string name="txt_button_sign_in">Sign In</string>
    <string name="txt_forgot_password">¿Forgot Password?</string>
    <string name="txt_add_question">Add Question</string>
    <string name="txt_create_an_account">Create An Account</string>
    <string name="txt_personal_information">Personal Information</string>
    <string name="txt_register_last_name">Last Name</string>
    <string name="txt_register_name">Name</string>
    <string name="txt_register_username">Username</string>
    <string name="txt_register_email">Email</string>
    <string name="txt_register_confirm_email">Confirm Email</string>
    <string name="txt_register_password">Password</string>
    <string name="txt_register_option_teacher">I am a teacher</string>
    <string name="txt_register_option_student">I am a student</string>
    <string name="txt_register_option_terms">I have read and accept the terms and conditions of use</string>
    <string name="txt_register_button">CREATE ACCOUNT</string>
    <string name="txt_detail_questions_text">Text</string>
    <string name="txt_detail_questions_option_1">Option 1</string>
    <string name="txt_detail_questions_option_2">Option 2</string>
    <string name="txt_detail_questions_option_3">Option 3</string>
    <string name="txt_detail_questions_answer">Answer</string>
    <string name="txt_detail_questions_edit">Edit</string>
    <string name="txt_questions_text">Text</string>
    <string name="txt_questions_option_1">Option 1</string>
    <string name="txt_questions_option_2">Option 2</string>
    <string name="txt_questions_option_3">Option 3</string>
    <string name="txt_questions_answer">Answer</string>
    <string name="txt_questions_category">Category</string>
    <string name="txt_questions_description">Description</string>
    <string name="txt_questions_save">Save</string>
    <string name="txt_questions_cancel">Cancel</string>
    <string name="txt_edit_questions_text">Text:</string>
    <string name="txt_edit_questions_text_2">Text</string>
    <string name="txt_edit_questions_option_1">Option 1:</string>
    <string name="txt_edit_questions_option_1_1">Option 1</string>
    <string name="txt_edit_questions_option_2">Option 2:</string>
    <string name="txt_edit_questions_option_2_1">Option 2</string>
    <string name="txt_edit_questions_option_3">Option 3:</string>
    <string name="txt_edit_questions_option_3_1">Option 3</string>
    <string name="txt_edit_questions_answer">Answer:</string>
    <string name="txt_edit_questions_answer_1">Answer</string>
    <string name="txt_edit_questions_category">Category:</string>
    <string name="txt_edit_questions_category_1">Category</string>
    <string name="txt_edit_questions_description">Description:</string>
    <string name="txt_edit_questions_description_1">Description</string>
    <string name="txt_edit_questions_button_upgrade">UPGRADE</string>
    <string name="txt_edit_questions_button_remove">REMOVE</string>
    <string name="txt_edit_questions_button_cancel">CANCEL</string>
    <string name="txt_questions_item_category">Category</string>
    <string name="txt_questions_item_area">Area</string>
    <string name="txt_add_questions_title">New Questions</string>
    <string name="txt_add_questions_message">The question was added correctly</string>
    <string name="txt_edit_questions_remove">The question was deleted</string>
    <string name="txt_edit_questions_title">Edit Questions</string>
    <string name="txt_main_activity_error_email">The email is invalid or empty</string>
    <string name="txt_main_activity_error_password">Password cannot be empty</string>
    <string name="txt_main_activity_on_login">The username or password is not recognized</string>
    <string name="txt_main_questions_title">Questions</string>
    <string name="txt_signup_title">Create Account</string>
    <string name="txt_signup_form_error_name">The name cannot be empty</string>
    <string name="txt_signup_form_error_last_name">Last names cannot be empty</string>
    <string name="txt_signup_form_error_username">Username cannot be empty</string>
    <string name="txt_signup_form_error_email">The email is invalid or empty</string>
    <string name="txt_signup_form_error_confirm_email">Email confirmation is invalid or empty</string>
    <string name="txt_signup_form_error_password">The password cannot be empty, minimum length 6 characters</string>
    <string name="txt_signup_form_error_options">Select what type of user is</string>
    <string name="txt_signup_form_error_terms">You must accept the terms and conditions</string>
    <string name="txt_signup_text_registration_right">User successfully registered</string>
    <string name="txt_signup_text_registration_incorrect">An error occurred while registering</string>
    <string name="txt_add_test">Add Test</string>
    <string name="txt_main_test_title">Tests</string>
    <string name="txt_test_item_name">Test</string>
    <string name="dashboard_page_title">Dashboard</string>
    <string name="btn_dashboard_show_tests">Show tests</string>
    <string name="btn_dashboard_show_questions">Show questions</string>
    <string name="txt_show_test_label">Test:</string>

</resources>