<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdicionarPreguntas">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/edtTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_text" />

    <EditText
        android:id="@+id/edtopcion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_option_1" />

    <EditText
        android:id="@+id/edtopcion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_option_2" />

    <EditText
        android:id="@+id/edtOpcion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_option_3" />
    <EditText
        android:id="@+id/edtRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_answer" />
    <EditText
        android:id="@+id/edtarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_category" />
    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_questions_description" />
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_questions_save" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_questions_cancel" />

</LinearLayout>