<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarPreguntas">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ID"
        android:enabled="false"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_text"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/edtTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_edit_questions_text_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_option_1"
            android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/edtopcion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit_questions_option_1_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_option_2"
            android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/edtopcion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit_questions_option_2_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_option_3"
            android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/edtOpcion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit_questions_option_3_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_answer"
            android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/edtRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit_questions_answer_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_category"
            android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/edtarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit_questions_category_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_edit_questions_description"
            android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit_questions_description_1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_edit_questions_button_upgrade" />
    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_edit_questions_button_remove" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_edit_questions_button_cancel" />

</LinearLayout>