<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_register_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@color/cardview_dark_background"
            android:hint="@string/txt_register_last_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_register_username"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_register_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etConfirmaCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_register_confirm_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_register_password"
            android:password="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_soy_profesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_register_option_teacher" />

            <RadioButton
                android:id="@+id/radio_soy_estudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_register_option_student" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cbTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_register_option_terms" />

        <Button
            android:id="@+id/btnRegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_register_button" />
    </LinearLayout>

</LinearLayout>